--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 # Setup
 title:            Tracking Poverty
 tagline:          ''
-description:      'A 2022 Data Science for Social Good summer fellowship project at the University of Washington' 
+description:      'Building Households and Families out of Individual Level Administrative Data' 
 url:              "https://uwescience.github.io"
 baseurl:          "/DSSG2022-Tracking-Poverty"
 
